# ChangeLog for dev-vcs/git
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.115 2012/01/07 02:58:11 robbat2 Exp $

*git-1.7.8.3 (07 Jan 2012)

  07 Jan 2012; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.8.3.ebuild:
  Version bump.

*git-1.7.8.2 (02 Jan 2012)

  02 Jan 2012; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.8.2.ebuild:
  Version bump.

*git-1.7.8.1 (21 Dec 2011)

  21 Dec 2011; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.8.1.ebuild:
  Version bump.

*git-1.7.8 (03 Dec 2011)

  03 Dec 2011; Robin H. Johnson <robbat2@gentoo.org> -git-1.7.8_rc1.ebuild,
  -git-1.7.8_rc1-r1.ebuild, -git-1.7.8_rc3.ebuild, -git-1.7.8_rc4.ebuild,
  +git-1.7.8.ebuild:
  Version bump.

*git-1.7.8_rc4 (29 Nov 2011)

  29 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.8_rc4.ebuild:
  Version bump.

  22 Nov 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #195316

*git-1.7.7.4 (18 Nov 2011)

  18 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.7.4.ebuild:
  Version bump.

*git-1.7.8_rc3 (17 Nov 2011)

  17 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.8_rc3.ebuild:
  Version bump.

*git-1.7.8_rc1-r1 (16 Nov 2011)

  16 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.8_rc1-r1.ebuild:
  Bug #377883: build correctly with libpcre for git-grep -P.

*git-1.7.7.3 (09 Nov 2011)

  09 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.7.3.ebuild:
  Version bump.

*git-1.7.8_rc1 (08 Nov 2011)

  08 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.8_rc1.ebuild:
  Version bump.

*git-1.7.7.2 (02 Nov 2011)

  02 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.7.2.ebuild:
  Version bump.

*git-1.7.7.1-r1 (24 Oct 2011)

  24 Oct 2011; Robin H. Johnson <robbat2@gentoo.org> +git-1.7.7.1-r1.ebuild,
  git-9999.ebuild:
  EAPI=4 and bash-completion-r1 support now that python.eclass has EAPI4, now