@@ -106,6 +106,6 @@ EBUILD git-1.7.8.1.ebuild 15110 RMD160 4e8aef92de685c2636f45ed19b169a10da0d2085 
 EBUILD git-1.7.8.2.ebuild 15110 RMD160 1b0ea4da22c120a9d696c62dbf19c97e4215dad6 SHA1 631e62ad317a44841363f19a167d9ba83f6d90ec SHA256 c4021030525ea958d054077bcf9658e24a3222bf105dbe68f04cfb6c95e28ce8
 EBUILD git-1.7.8.3.ebuild 15110 RMD160 e6c7afb193b21fed5df83773d245cb906c742713 SHA1 93e44695e199d483f076c62adc7de723f5782283 SHA256 cd68b51ae7d404e05f7e84f13d8e3d4ad54d434ea46d611232c516174dcfc739
 EBUILD git-1.7.8.ebuild 15108 RMD160 bbf80a4cdc89f02f98a0fab0c514b84adae71f7b SHA1 59459055b38ac4560ca487fcf2c4551739957725 SHA256 ada91dcf9536675492ac599fda7072b47a135356180c36b04ed8210dc0070760
-EBUILD git-9999.ebuild 15075 RMD160 263565eec62e6fea167127dbcc245a0bc6075b5d SHA1 e7db98316bbac2f42a64d1f4d04d0b920de2bba0 SHA256 e0f23e05269d7736c5ce4797c3c9a7eae906f7f6e9109745a9d3f48fb96beb76
-MISC ChangeLog 84557 RMD160 8bf1efe37f716645ed5e5634664e01b8e3bd35dd SHA1 2d57ea7e49fdf7267e359e1a49e8bcff8163bb41 SHA256 b7811d003f37c3439a56b2ec5bdc34700349bea3e95a2e95963731ad085c686e
+EBUILD git-9999.ebuild 15108 RMD160 e297e0b1b70c43321973e3d9b63aeb8ef4251b60 SHA1 dd94ab88e6560fcb3674975ca5e19f6ce775bf99 SHA256 f3ba809058a8c025a126dbc27aab4631a578b5799c92445f2796913eff6fcb9c
+MISC ChangeLog 84671 RMD160 5c3db7614067817a6d889ef4851d9d75f4212ca9 SHA1 61eb0ebcd1e701e4eb3adc67ef737c73dc3c4546 SHA256 04f365f5650bb7a355a7f6d27566c8f055af937317592db395a2ae5d4fcfb8a3
 MISC metadata.xml 1519 RMD160 4ba9e2c4e8239f644b1f4a82bc47d1b587e195a6 SHA1 813d8c8015a1cb757e54fa8681f8a7686cfc40e7 SHA256 58313781f3108991fee93cb0119e6720fe895487e43d44dbf96c4733f81854ca
